# Entmoot

./: .dockerignore  .env.example  .env.production.example  .env.staging.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Claude.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST.txt  DEPLOYMENT_WALKTHROUGH.md  DEPLOY_QUICK_START.md  DEPLOY_VERCEL_HYBRID.md  DOCKER_QUICKSTART.md  Dockerfile  FILES_CREATED_6.5-6.6.txt  FOLLOW_UP_PLAN.md  IMPLEMENTATION_STORIES_5.3-5.4.md  IMPLEMENTATION_SUMMARY_6.5-6.6.md  LICENSE  PRODUCTION_DEPLOYMENT_SUMMARY.md  PROJECT_STRUCTURE.txt  QUICKSTART_FRONTEND.md  README.md  SETUP_COMPLETE.md  START_DEPLOYMENT.md  STORIES_4.4-4.6_COMPLETE.md  STORIES_5.5-5.7_COMPLETION.md  STORIES_6.5-6.6_COMPLETION.md  STORY_1.2_COMPLETE.md  STORY_1.3_COMPLETION_REPORT.md  STORY_1.6_COMPLETION_REPORT.md  STORY_2.1_COMPLETION_REPORT.md  STORY_2.3_COMPLETION_REPORT.md  STORY_2.4_COMPLETION_REPORT.md  STORY_2.6_IMPLEMENTATION_SUMMARY.md  STORY_3.6_3.7_COMPLETION_REPORT.md  TERRAIN_ANALYSIS.md  architecture.md  (+13 more)
.github/workflows/: ci.yml  deploy.yml
data/uploads/3d008e95-cee3-4f81-8b31-2225568a19c2/: metadata.json
data/uploads/6b39e52f-2625-45f5-aecc-879384334710/: metadata.json
data/uploads/9a19874d-8ae2-4f8d-ab88-44556fa47354/: metadata.json
data/uploads/ec91b89e-ef18-4048-b36a-be57f1149a32/: metadata.json
docs/: INDEX.md  bmm-readiness-assessment-2025-11-10.md  bmm-workflow-status.yaml  deployment.md  development.md  disaster-recovery.md  execution-plan.md  openapi.yaml  operations.md  sprint-status.yaml
examples/: boundary_extraction_demo.py  buildability_analysis_demo.py  earthwork_volume_demo.py  fema_floodplain_example.py  road_network_demo.py  terrain_analysis_demo.py  visualization_example.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  RESULTS_UI_README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: FileDropzone.tsx  Header.tsx  LayoutEditor.tsx  MapViewer.tsx  ResultsDashboard.tsx  index.ts
frontend/src/hooks/: useFileUpload.ts
frontend/src/pages/: ConfigPage.tsx  ResultsPage.tsx  (+2 more)
samples/: create_samples.py
scripts/: generate_openapi.py
src/entmoot/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_boundaries.py  test_cleanup.py  test_config.py  test_error_handlers.py  test_errors.py  test_kml_parser.py  test_kmz_parser.py  test_logging.py  test_main_api.py  test_models.py  test_sample.py  test_storage.py  test_upload_api.py  test_validation.py
tests/fixtures/: __init__.py  complex.kml  create_kml_fixtures.py  malformed.kml  rural_demo.kml  simple.kml
tests/test_constraints/: __init__.py  test_buffers.py  test_collection.py  test_models.py
tests/test_crs/: __init__.py  test_detector.py  test_normalizer.py  test_transformer.py  test_utm.py
tests/test_earthwork/: __init__.py  test_post_grading.py  test_pre_grading.py  test_volume_calculator.py
tests/test_export/: __init__.py  test_geospatial.py
tests/test_integrations/: __init__.py  test_fema.py  test_osm.py  test_usgs.py
tests/test_optimization/: test_assets.py  test_collision.py  test_genetic_algorithm.py  test_problem.py
tests/test_reports/: test_pdf_generator.py
tests/test_roads/: __init__.py  test_graph.py  test_network.py  test_pathfinding.py
tests/test_services/: __init__.py  test_existing_conditions_service.py  test_rural_demo_e2e.py  test_seed_solution.py
tests/test_terrain/: __init__.py  test_aspect.py  test_buildability.py  test_dem_loader.py  test_dem_validator.py  test_slope.py  test_terrain_models.py  test_terrain_service.py
tests/test_visualization/: test_map_2d.py  test_map_3d.py
(+105 files in other folders)
